--- a/src/pages/Basketball/Basketball.scss
+++ b/src/pages/Basketball/Basketball.scss
@@ -1,11 +1,25 @@
 .sports-container {
+
+    background-image: url("../../assets/images/basketball-img.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
     &__sport {
         display: flex;
         flex-wrap: wrap;
+        justify-content: space-around;
     }
 }
 
 .sports-card {
     list-style-type: none;
-    padding: 30px;
+    border: 1px solid black;
+    border-radius: 4px;
+    background-color: lightgray;
+    opacity: .8;
+    margin: 30px;
+    padding: 10px;
+    width: 224px;
+    height: 280px;
 }
